Fix #9786 - Add CSS qualification to visible sticky promo box

--- a/media/css/firefox/includes/_sticky-promo.scss
+++ b/media/css/firefox/includes/_sticky-promo.scss
@@ -65,7 +65,7 @@ $image-path: '/media/protocol/img';
 }
 
 @media #{$mq-md} {
-    .mzp-c-sticky-promo {
+    .mzp-c-sticky-promo.mzp-a-slide-in {
         display: block;
     }
 }
